# Notflix

./: .dockerignore  .gitattributes  .gitguardian.yml  .gitignore  AGENTS.md  GEMINI.md  all_package_jsons.txt  biome.json  bug-report.md  check_comments.py  codebase.txt  compose.sh  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  failed_logs.txt  git_conflicts.diff  git_diff_review.patch  git_log.txt  id.txt  jobs.json  lint-staged.config.js  notflix_deploy.key  notflix_deploy.key.pub  package-lock.json  package.json  plan.txt  pnpm-lock.yaml  renovate.json  reply_missing.py  repomix.config.json  repomix_output.txt  restart_all.bat  start.bat  start.sh  start_docker.bat  stop_docker.bat  ui-ux-issues-report.md
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  histoire.yml  quality-gates.yml
.husky/: pre-commit
.kiro/specs/immersion-language-platform/: design.md  requirements.md  tasks.md
apps/ai-service/: .envrc  Dockerfile  debug_warnings.py  gen_openapi.py  main.py  openapi.json  pyproject.toml  requirements.txt
apps/ai-service/core/: filter.py  interfaces.py  models.py  transcriber.py  translator.py
apps/ai-service/tests/: conftest.py  test_api.py  test_batch_processing.py  test_integration.py  test_security_and_media.py  test_vcr_endpoints.py
apps/ai-service/tests/cassettes/: test_filter_endpoint_vcr  test_transcribe_endpoint_vcr  test_translate_endpoint_vcr
apps/ai-service/tests/manual/: test_analyze.py  test_transcribe.py  test_translate.py
apps/platform/: .dependency-cruiser.cjs  .env.example  .env.test  .envrc  .gitignore  .jscpd.json  .markdownlintignore  API.md  Dockerfile  Dockerfile.prod  README.md  assets  drizzle.config.ts  eslint.config.js  histoire.config.ts  package.json  playwright.config.ts  playwright_output.txt  stryker.conf.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.integration.config.ts
apps/platform/report/html/: index.html  jscpd-report.json
apps/platform/reports/mutation/: mutation.html
apps/platform/scripts/: e2e-standalone.ts  e2e-trigger.ts  screenshot-player.ts  test-brain-connection.ts
apps/platform/src/: app.css  app.d.ts  hooks.server.ts
apps/platform/src/lib/: auth-client.ts  constants.ts  e2e-hooks.ts  logger.ts  types.ts  upload-pipeline.test.ts  upload-pipeline.ts  utils.ts
apps/platform/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
apps/platform/static/: test-video.webm
apps/platform/test-results/: .last-run.json
apps/platform/tests/: vitest.integration.setup.ts  vitest.setup.ts
apps/platform/tests/api/: game-generate-validation.test.ts  health.test.ts  (+11 more)
assets/vocab/es/: master_es.csv
docs/: CODE_REVIEW_REPORT.md  PYTHON_LINTERS.md  QUALITY_HARDENING_PLAN.md
docs/architecture/: ADR-001-master.md  ADR-002-authentication.md  ADR-003-ai-service-security.md  ADR-004-observability.md  ADR-005-di-testing.md  ADR-006-frontend-stack.md  ADR-007-idiomatic-backend-patterns.md  ADR-008-test-design-anti-patterns.md  ADR-009-async-event-emission.md  blueprint.md  testing-strategy.md
docs/figma-designs/: README.md  components.md  design-tokens.md  pages.md
docs/reports/: bug-report.md
docs/specs/: database-schema.md  design-brief.md  doc-authority.md  functional-specs.md  learning-session-state.md  processing-progress.md
docs/standards/: frontend-stack.md  testing-and-di.md
docs/superpowers/plans/: 2026-04-20-pr59-review-feedback.md  2026-04-22-bugfix-test-suite.md  2026-04-29-e2e-test-suite-fixes 2.md  2026-04-29-nflx177-e2e-learner-journey.md
docs/superpowers/specs/: 2026-04-29-nflx177-e2e-learner-journey-design.md
experiments/notflix-logo-animation/: animation.js  index.html  style.css
infra/: README.md  docker-compose.test.yml  docker-compose.yml
infra/ansible/: ansible.cfg  site.yml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: ensure-podman.bat  generate_audio.py  manager.mjs  push-to-github.sh
volumes/api/: kong.yml
(+163 files in other folders)
