[project]
name = "notflix-ai-service"
version = "0.0.1"
description = "AI service for Notflix — transcription, filtering, translation"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "faster-whisper",
    "spacy>=3.8,<3.9",
    "transformers",
    "sentencepiece",
    "sacremoses",
    "torch",
    "torchaudio",
    "python-multipart",
    "sse-starlette",
    "pydantic",
    "structlog",
    "protobuf",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "es-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff.lint]
select = ["E", "F", "B", "S"]
ignore = ["E501"] # Ignore Line too long

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0903", # too-few-public-methods
]
# Specifically flag global statements as requested
enable = ["global-statement"]

[tool.bandit]
exclude_dirs = ["venv", "tests"]
skips = ["B101"] # Skip assert checks in non-test files if desired, but we exclude tests dir anyway

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--ignore=tests/manual"
pythonpath = ["."]

filterwarnings = [
    "ignore::DeprecationWarning:importlib.*:",      # Ignore importlib/SWIG DeprecationWarnings
    "ignore:.*builtin type SwigPyPacked.*:DeprecationWarning",
    "ignore:.*builtin type SwigPyObject.*:DeprecationWarning",
    "ignore:.*builtin type swigvarlink.*:DeprecationWarning"
]

